name:                lens-playground
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ahri/lens#readme
license:             BSD3
license-file:        LICENSE
author:              Adam Piper
maintainer:          adam@ahri.net
copyright:           2017
category:            prototype
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable lens-playground
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , aeson
                     , containers
                     , lens-aeson
                     , mtl
                     , text
